fix not centered connection status message

--- a/app/webroot/css/basic.css
+++ b/app/webroot/css/basic.css
@@ -655,13 +655,15 @@
 .connection-message {
 	clear: both;
 	color: white;
-	position: fixed;
-	top: -1px;
-	left: 37%;
+	position: relative;
+	top: -50px;
 	padding-left: 8px;
 	padding-right: 8px;
 	border: 1.5px solid white;
 	background: black;
+	margin-left: auto;
+	margin-right: auto;
+	display: inline;
 }
 
 .ttc-delete-icon {
